Exercises-part-1/exercise-1.12/manifests/images-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: images
spec:
  selector:
    matchLabels:
      app: images
  template:
    metadata:
      labels:
        app: images
    spec:
      volumes:
        - name: shared-files
          persistentVolumeClaim:
            claimName: files-claim
      containers:
      - name: images
        image: sirpacoder/images:v0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
          - mountPath: /usr/src/app/files
            name: shared-files
