Exercises-part-1/exercise-1.12/manifests/images-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: images-svc
spec:
  selector:
    app: images
  ports:
  - port: 30081
    protocol: TCP
    targetPort: 3002
