Exercises-part-1/exercise-1.12/manifests/project-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-svc
spec:
  selector:
    app: project
  ports:
  - port: 30081
    protocol: TCP
    targetPort: 3001
