Exercises-part-1/exercise-1.12/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project
  labels:
    name: project
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: project-svc
            port: 
              number: 30081
      - path: /image
        pathType: Prefix
        backend:
          service:
            name: images-svc
            port: 
              number: 30081
